# computercraft-programs

./: .editorconfig  .envrc  .gitignore  HACKING.md  README.md  build-www.sh  default.nix  gold_farm.lua  make-initrd.py  pkgs.lua  refuel.lua  rescue.lua  startup.lua
.github/workflows/: static.yml
async/: README.md  init.lua
bytesio/: init.lua
initrd/: README.md  __main__.py  bz.py  fs.py  huffman.py  minify.py  ser.py  snippets.py  suffix_array.py
initrd-ng/: Cargo.toml  README.md
initrd-ng/initrd-core/: Cargo.toml
initrd-ng/initrd-ng/: Cargo.toml  build.rs
initrd-ng/initrd-ng/src/: analyze.rs  bwt.rs  bz.rs  decode-stage1.lua  decode-stage2.lua  entropy.rs  fs.rs  huffman.rs  initrd-template.lua  main.rs  multitree.rs  snippets.rs  sst.rs
initrd/snippets/: code_template.json  decompress.json  decompress_mtf.json
named/: README.md  init.lua
nfs/: client.lua  driver.lua  server.lua  startup.lua
nix/: luamin-package-lock.json
rsh/: README.md  client.lua  events.lua  server.lua  vt.lua
storage/: README.md  async.lua  client.lua  common.lua  compacter.lua  ender_client.lua  ender_helper.lua  server.lua  ui.lua  util.lua
supersmelter/: README.md  chunk_vial.lua  data.lua  fuel.lua  input.lua  names.lua  output.lua  recovery.lua  run.lua  setup.lua  util.lua  work.lua
sys/: startup.lua
sys/run/: README.md
sys/targets/: base.lua  fileserver.lua  gold-farm.lua  metropanel.lua  metrotable.lua  nfsd.lua  server.lua  (+7 more)
tmpfs/: driver.lua
vfs/: driver.lua  list.lua  unmount.lua
wakeywakey/: init.lua
xray/: README.md  listen.lua  main.lua
(+4 files in other folders)
