[package]
name = "initrd-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { workspace = true }
cursive = { workspace = true }
ignore = { workspace = true }
initrd-core = { version = "0.1.0", path = "../initrd-core" }
libsais = { workspace = true }
rayon = { workspace = true }

[build-dependencies]
initrd-core = { version = "0.1.0", path = "../initrd-core" }
lazy-regex = { workspace = true }

[features]
perf-record = []
